bug: header image would compress too much when resize window

--- a/main.css
+++ b/main.css
@@ -86,7 +86,7 @@ img {
 }
 
 #header-image {
-    max-width: 50%;
+    max-width: 100vh;
     height: auto;
     opacity: 0.7;
     border: none;
